[BUGFIX] The contentTypeSelectorTabs is not fully visible
When contentTypeSelectorTabs is open the right t3-inspector
is placed on top. This results in that the content
types are not fully visible

Due to a position absolute setting in jquery popup the
z-index is set to 10001. The setting is found in
jquery.popover.js on line 282.

Fixes: #44667
Original-Commit-Hash: 75c8d955a638c25d1444616a14a34c2ba7135f15

--- a/TYPO3.Neos/Resources/Public/StyleSheet/_js-ui.scss
+++ b/TYPO3.Neos/Resources/Public/StyleSheet/_js-ui.scss
@@ -170,8 +170,11 @@
 				@include border-radius(0);
 			}
 		}
-		&.t3-new-contentelement-popover .content {
-			background: transparent;
+		&.t3-new-contentelement-popover {
+			z-index: 10090 !important;
+			.content {
+				background: transparent;
+			}
 		}
 	}
 }
